Add get store request
