# api/openapi.yaml
@@ -131,6 +131,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: unexpected error
+  /stores:
+    get:
+      description: return store list
+      operationId: getStores
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Store'
+                type: array
+          description: store response
 components:
   schemas:
     Pet:
@@ -165,6 +178,22 @@ components:
         id:
           format: int64
           type: integer
+      required:
+      - id
+      type: object
+    Store:
+      example:
+        address: address
+        name: name
+        id: 0
+      properties:
+        id:
+          format: int64
+          type: integer
+        name:
+          type: string
+        address:
+          type: string
       required:
       - id
       type: object
